design dashboard done

--- a/templates/base.html
+++ b/templates/base.html
@@ -186,6 +186,11 @@
                 <ul class="nav flex-column mb-2">
                     {% if 'Design Manager' in user_roles %}
                     <li class="nav-item">
+                        <a class="nav-link" href="/design/dashboard">
+                            <i class="bi bi-speedometer2 me-2"></i> Design Dashboard
+                        </a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link" href="/design/projects/new">
                             <i class="bi bi-plus-circle me-2"></i> New Project
                         </a>
@@ -334,6 +339,11 @@
                 </h6>
                 <ul class="nav flex-column mb-2">
                     {% if 'Design Manager' in user_roles %}
+                    <li class="nav-item">
+                        <a class="nav-link" href="/design/dashboard">
+                            <i class="bi bi-speedometer2 me-2"></i> Design Dashboard
+                        </a>
+                    </li>
                     <li class="nav-item">
                         <a class="nav-link" href="/design/projects/new">
                             <i class="bi bi-plus-circle me-2"></i> New Project
